# ShelfScanAI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: compliance.yaml  data.yaml  model.yaml  training.yaml
docs/: DESIGN.md
scripts/: build_reference_library.py  download_test_data.py
src/: config.py
src/api/: main.py  routes.py  schemas.py
src/compliance/: engine.py  scorer.py  visualizer.py
src/data/: augmentation.py  dataset.py  prepare.py  splits.py
src/models/: aligner.py  detector.py  embedder.py
tests/: conftest.py  test_aligner.py  test_api.py  test_compliance.py
training/: eval.py  export.py  train.py
