[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shelfscan"
version = "0.1.0"
description = "Planogram compliance verification from noisy field photos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vahant Sharma"}
]
dependencies = [
    "ultralytics>=8.4.70",
    "open-clip-torch>=2.24.0",
    "faiss-cpu>=1.14.2",
    "kornia>=0.5.11",
    "albumentations>=2.0.8",
    "onnxruntime>=1.21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.25",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "wandb>=0.18.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15.0",
    "mypy>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "types-PyYAML",
]
colab = [
    "google-colab",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
